--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'io.projectreactor:reactor-test'
+	
+	// Swagger UIを利用するため
+	compile "io.springfox:springfox-swagger2:2.9.2"
+	compile 'io.springfox:springfox-swagger-ui:2.9.2'  
 }
 
 test {
